# SwitchMatrixScanner

./: .gitignore  LICENSE  README.md  keyboard_matrix.icircuit  library.properties
examples/Sparkfun_QWIIC_Keyboard_Explorer/: Sparkfun_QWIIC_Keyboard_Explorer.ino
src/: SwitchMatrixScanner.h
test/: CMakeLists.txt  README.md  SwitchMatrixScannerTest.cpp
